--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,7 @@
   padding-bottom: 10px;
   padding-top: 10px;
   
-  background-color: #282c34;
-  color: aliceblue;
+  color: black;
   border: none;
   cursor: pointer;
 
